2008-04-15  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/config.h.in, libavogadro/src/config.h.in: Added
	INSTALL_LIBDIR define in order to more reliably load plugins.

	* avogadro/src/mainwindow.cpp, libavogadro/src/glwidget.*,
	libavogadro/src/toolgroup.cpp: Adapted the loading scheme to use
	INSTALL_LIBDIR - far more reliable.

2008-04-13  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/settingsdialog.*: Removed the axes and debug display
	options from the global config - to be relocated to the view menu.
	Also (hopefully) improved the display quality feedback.

	* libavogadro/src/tools/navigate.* -> libavogadro/src/navigate.*,
	libavogadro/include/avogadro/navigate.h,
	libavogadro/src/tools/CMakeLists.txt,
	libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/autoopttool.cpp,
	libavogadro/src/tools/bondcentrictool.cpp,
	libavogadro/src/tools/clickmeasuretool.cpp,
	libavogadro/src/tools/drawtool.cpp,
	libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/navigatetool.cpp,
	libavogadro/src/tools/selectrotatetool.cpp: Moved the navigate
	functions from the tools directory into the library. They should be
	exposed as part of our API and would be useful in scripting.

	* libavogadro/src/tools/CMakeLists.txt: Removed duplicate definition
	of bondcentrictool.

2008-04-13  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Clipping now works
	for any specified plane.

2008-04-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Added clipping
	plane. This feature could later be moved to glwidget to clip any
	engine... This would probably require engines to have a clipped and
	solid property (like they currently have radius)

2008-04-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp, libavogadro/src/glwidget.cpp: Parts